--- a/package.json
+++ b/package.json
@@ -15,11 +15,13 @@
     "nodemon": "^2.0.21"
   },
   "dependencies": {
+    "axios": "^1.3.5",
     "cors": "^2.8.5",
     "debug": "^4.3.4",
     "ejs": "^3.1.8",
     "express": "^4.18.2",
     "mongoose": "^7.0.0",
+    "node-cron": "^3.0.2",
     "path": "^0.12.7"
   }
 }
